# psi-embedded-app

./: .gitignore  pyproject.toml
app/: auth.py  config.py  main.py  models.py  powerbi.py
docs/: 01-azure-setup.md  02-running-the-app.md  03-troubleshooting.md  04-embedding-data-flow.md
static/css/: app.css
static/js/: embed.js
templates/: index.html
