[project]
name = "pbi-embedded-app"
version = "0.1.0"
description = "Local webapp for embedding Power BI reports and paginated reports via service principal auth"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "httpx>=0.27",
    "msal>=1.31",
    "pydantic-settings>=2.6",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
